%%{init: {'theme': 'base', 'themeVariables': { 'primaryColor': '#dc2626', 'primaryTextColor': '#fff', 'primaryBorderColor': '#b91c1c', 'lineColor': '#ef4444'}}}%%
classDiagram
    direction TB

    %% Core Types
    class DiagramTab {
        +string id
        +string name
        +string code
        +boolean isDirty
        +TabType type
        +string? filePath
    }

    class SavedDiagram {
        +string id
        +string name
        +string code
        +Date createdAt
        +Date updatedAt
    }

    class DiagramHistory {
        +string[] past
        +string present
        +string[] future
    }

    class AppSettings {
        +boolean autoSave
        +number autoSaveInterval
        +number maxHistorySize
    }

    %% File System Types
    class Workspace {
        +string name
        +string rootPath
        +FileNode[] files
        +FileSystemDirectoryHandle? handle
        +boolean isVirtual
    }

    class FileNode {
        +string name
        +string path
        +FileNodeType type
        +FileNode[]? children
        +FileSystemFileHandle? handle
        +string? content
    }

    class SearchResult {
        +FileNode file
        +number lineNumber
        +string lineContent
        +number matchStart
        +number matchEnd
    }

    %% Theme Types
    class MermaidTheme {
        +string id
        +string name
        +string baseTheme
        +ThemeVariables variables
    }

    class MarkdownTheme {
        +string id
        +string name
        +MarkdownStyles styles
    }

    class DiagramTemplate {
        +string id
        +string name
        +string category
        +string description
        +string code
    }

    %% Component Props
    class ToolbarProps {
        +ToolbarMode mode
        +boolean isDarkMode
        +Orientation orientation
        +number zoomLevel
        +boolean isFullscreen
        +boolean showMinimap
        +onThemeChange()
        +onTemplateSelect()
        +onExport()
    }

    class CodeEditorProps {
        +string code
        +string? error
        +boolean isDarkMode
        +onChange()
        +onUndo()
        +onRedo()
        +onSave()
    }

    class PreviewProps {
        +string code
        +string? error
        +boolean isDarkMode
        +MermaidTheme theme
        +Orientation orientation
        +onNodeMove()
    }

    %% Hook Return Types
    class UseTabsReturn {
        +DiagramTab[] tabs
        +DiagramTab? activeTab
        +addTab()
        +closeTab()
        +selectTab()
        +renameTab()
        +updateTabCode()
    }

    class UseWorkspaceReturn {
        +Workspace? workspace
        +boolean isLoading
        +openFolder()
        +closeWorkspace()
        +readFile()
        +writeFile()
        +searchFiles()
    }

    class UseHistoryReturn {
        +string value
        +boolean canUndo
        +boolean canRedo
        +setValue()
        +undo()
        +redo()
        +clear()
    }

    class UseExportReturn {
        +boolean isExporting
        +string? exportError
        +exportPng()
        +exportSvg()
        +exportMarkdown()
        +copySvg()
    }

    %% Enums
    class TabType {
        <<enumeration>>
        diagram
        markdown
    }

    class FileNodeType {
        <<enumeration>>
        file
        folder
    }

    class ToolbarMode {
        <<enumeration>>
        diagram
        markdown
    }

    class Orientation {
        <<enumeration>>
        TD
        LR
    }

    class ActivityView {
        <<enumeration>>
        explorer
        search
        diagrams
        settings
    }

    %% Relationships
    DiagramTab --> TabType
    FileNode --> FileNodeType
    ToolbarProps --> ToolbarMode
    ToolbarProps --> Orientation
    PreviewProps --> Orientation
    PreviewProps --> MermaidTheme

    Workspace "1" *-- "many" FileNode : contains
    SearchResult --> FileNode : references

    UseTabsReturn --> DiagramTab : manages
    UseWorkspaceReturn --> Workspace : manages
    UseHistoryReturn --> DiagramHistory : uses
